--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "bootstrap": "^5.3.3",
     "class-variance-authority": "^0.7.1",
     "cra-template": "1.2.0",
+    "firebase": "^11.3.1",
+    "jspdf": "^2.5.2",
     "lucide-react": "^0.475.0",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.5",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
+    "react-toastify": "^11.0.3",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
