--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "class-variance-authority": "^0.7.1",
     "cra-template": "1.2.0",
     "firebase": "^11.3.1",
+    "framer-motion": "^12.4.4",
     "jspdf": "^2.5.2",
     "lucide-react": "^0.475.0",
     "react": "^18.3.1",
